--- a/templates/index.html
+++ b/templates/index.html
@@ -8,63 +8,65 @@
     
 <!-- Adding styles like color, height, width, border to our html page -->
 <style>
+  input[type=text], select {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-weight: bolder;
+  }
+
+  input[type=submit] {
+    width: 80%;
+    background-color: goldenrod;
+    color:black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size:100;
+    font-weight: bolder;
+    text-align: center;
+  }
 
 
-input[type=text], select {
-  width: 80%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-weight: bolder;
-}
+  input[type=submit]:hover {
+    background-color: orangered;
+  }
 
-input[type=submit] {
-  width: 80%;
-  background-color: goldenrod;
-  color:black;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size:100;
-  font-weight: bolder;
-}
-
-
-input[type=submit]:hover {
-  background-color: orangered;
-}
-form{
+  table {
+    align-content: center;
     border-radius: 10px;
     padding-top: 5%;
     font-weight: bolder;
-}
-div {
- 
-  border-radius: 5px;
-  margin-left: 35%;
-  width: 30%;
-  
-}
-h1{
+  }
+
+  div {
+    border-radius: 5px;
+    margin-left: 20%;
+    width: 30%;
+    
+  }
+
+  h1 {
     color: goldenrod;
     font-size: 40px;
     font-weight: bolder;
-}
-h3{
-  color: white;
-}
+  }
 
-body {
-            background-repeat: no-repeat;
-            background-size: cover;
-            text-align: center;
-            padding: 0px;
-        }
-       
+  h3 {
+    color: white;
+  }
+
+  body {
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding: 0px;
+  }     
 </style>
 
 <body>
@@ -72,43 +74,86 @@ body {
 <h1>World Cup Prediction</h1>
 
 <div>
- <!-- Html form which will get all the values from user -->
- <form action="{{ url_for('predict')}}" method="post" style="background-color:#E6E6FA">
-
-<label for="Team">Team</label><br>
-<input type="text" id="Team" name="Team" placeholder="Brazil" required="required"><br>
-<label for="Attk_Rating">Attack Rating</label><br>
-<input type="text" id="Attk_Rating" name="Attk_Rating" placeholder="77" required="required"><br>
-<label for="Dfs_Rating">Defense Rating</label><br>
-<input type="text" id="Dfs_Rating" name="Dfs_Rating" placeholder="71" required="required"><br>
-     
-<!-- drop down options are provided for the categorical features -->
-<label for="Owner">No. of owners</label><br>
-<select id="owner" name="Owner">
-      <option value="0">0</option>
-      <option value="1">1</option>
-      <option value="3">3</option>
-    </select><br>
-<label for="Fuel_Type_Petrol">Fuel</label><br>
-    <select id="Fuel_Type_Petrol" name="Fuel_Type_Petrol" required="required">
-      <option value="Petrol">petrol</option>
-      <option value="Diesel">diesel</option>
-      <option value="Cng">cng</option>
-    </select><br>
-<label for="Seller_Type_Individual">Owner type</label><br>
-    <select id="Seller_Type_Individual" name="Seller_Type_Individual" required="required">
-      <option value="dealer">dealer</option>
-      <option value="individual">individual</option>
-      </select><br>
-<label for="Transmission_Mannual">Transmission type</label><br>
-    <select id="Transmission_Mannual" name="Transmission_Mannual" required="required">
-      <option value="mannual car">mannual car</option>
-      <option value="automatic car">automatic car</option>
-     </select> <br>
-     
-<!-- submit button -->           
-<input type="submit" value="Calculate Selling Price">
-</form>
+  <!-- Html table allows user to manipulate values for prediction -->
+  <table action="{{ url_for('predict')}}" method="post">
+    <thead>
+      <tr>
+          <th colspan="1">Team</th>
+          <th colspan="1">ATT</th>
+          <th colspan="1">MID</th>
+          <th colspan="1">DEF</th>
+          <th colspan="1">OVR</th>
+          <th colspan="1">Team Rating</th>
+      </tr>
+    </thead>
+    <tr style="background-color: #D3D3D3">
+      <td><br>France</td>
+      <td><input type="number" id="ATT1" name="ATT1" placeholder="85" required="required"></td>
+      <td><input type="number" id="MID1" name="MID1" placeholder="86" required="required"></td>
+      <td><input type="number" id="DEF1" name="DEF1" placeholder="83" required="required"></td>
+      <td><input type="number" id="OVR1" name="OVR1" placeholder="85" required="required"></td>
+      <td><select id="Team Rating1" name="Team Rating1">
+        <option value="1">1 star</option>
+        <option value="2">2 stars</option>
+        <option value="3">3 stars</option>
+        <option value="4">4 stars</option>
+        <option value="5">5 stars</option></select></td>
+    </tr>
+    <tr>
+      <td>Germany</td>
+        <td><input type="number" id="ATT2" name="ATT2" placeholder="83" required="required"></td>
+        <td><input type="number" id="MID2" name="MID2" placeholder="85" required="required"></td>
+        <td><input type="number" id="DEF2" name="DEF2" placeholder="80" required="required"></td>
+        <td><input type="number" id="OVR2" name="OVR2" placeholder="85" required="required"></td>
+        <td><select id="Team Rating2" name="Team Rating2">
+          <option value="1">1 star</option>
+          <option value="2">2 stars</option>
+          <option value="3">3 stars</option>
+          <option value="4">4 stars</option>
+          <option value="5">5 stars</option></select></td>
+    </tr>
+    <tr style="background-color: #D3D3D3">
+      <td>Portugal</td>
+      <td><input type="number" id="ATT3" name="ATT3" placeholder="85" required="required"></td>
+      <td><input type="number" id="MID3" name="MID3" placeholder="83" required="required"></td>
+      <td><input type="number" id="DEF3" name="DEF3" placeholder="85" required="required"></td>
+      <td><input type="number" id="OVR3" name="OVR3" placeholder="84" required="required"></td>
+      <td><select id="Team Rating3" name="Team Rating3">
+        <option value="1">1 star</option>
+        <option value="2">2 stars</option>
+        <option value="3">3 stars</option>
+        <option value="4">4 stars</option>
+        <option value="5">5 stars</option></select></td>
+    </tr>
+    <tr>
+      <td>Spain</td>
+      <td><input type="number" id="ATT4" name="ATT4" placeholder="83" required="required"></td>
+      <td><input type="number" id="MID4" name="MID4" placeholder="85" required="required"></td>
+      <td><input type="number" id="DEF4" name="DEF4" placeholder="83" required="required"></td>
+      <td><input type="number" id="OVR4" name="OVR4" placeholder="84" required="required"></td>
+      <td><select id="Team Rating4" name="Team Rating4">
+        <option value="1">1 star</option>
+        <option value="2">2 stars</option>
+        <option value="3">3 stars</option>
+        <option value="4">4 stars</option>
+        <option value="5">5 stars</option></select></td>
+    </tr>
+    <tr style="background-color: #D3D3D3">
+      <td>England</td>
+      <td><input type="number" id="ATT5" name="ATT5" placeholder="86" required="required"></td>
+      <td><input type="number" id="MID5" name="MID5" placeholder="83" required="required"></td>
+      <td><input type="number" id="DEF5" name="DEF5" placeholder="83" required="required"></td>
+      <td><input type="number" id="OVR5" name="OVR5" placeholder="83" required="required"></td>
+      <td><select id="Team Rating5" name="Team Rating5">
+        <option value="1">1 star</option>
+        <option value="2">2 stars</option>
+        <option value="3">3 stars</option>
+        <option value="4">4 stars</option>
+        <option value="5">5 stars</option></select></td>
+    </tr>
+  </table>
+  <!-- submit button -->           
+  <input type="submit" value="Calculate Selling Price">
 </div>
     
 <!-- the predicted text -->
