--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     
 <!-- Adding styles like color, height, width, border to our html page -->
 <style>
-  input[type=number] {
+  input {
     width: 70%;
     padding: 12px 20px;
     margin: 8px 8px;
@@ -99,73 +99,42 @@
           <th colspan="1">MID</th>
           <th colspan="1">DEF</th>
           <th colspan="1">OVR</th>
-          <th colspan="1">Team Rating</th>
       </tr>
     </thead>
     <tr style="background-color: #92887c">
-      <td><br>France</td>
+      <td><input type="text" id="Team1" name="Team1" value="France"></td>
       <td><input type="number" id="ATT1" name="ATT1" value="85"></td>
       <td><input type="number" id="MID1" name="MID1" value="86"></td>
       <td><input type="number" id="DEF1" name="DEF1" value="83"></td>
       <td><input type="number" id="OVR1" name="OVR1" value="85"></td>
-      <td><select id="Team Rating1" name="Team Rating1">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5" selected>5</option></select></td>
     </tr>
     <tr style="background-color: #bdb5aa">
-      <td>Germany</td>
+      <td><input type="text" id="Team2" name="Team2" value="Germany"></td>
         <td><input type="number" id="ATT2" name="ATT2" value="83"></td>
         <td><input type="number" id="MID2" name="MID2" value="85"></td>
         <td><input type="number" id="DEF2" name="DEF2" value="80"></td>
         <td><input type="number" id="OVR2" name="OVR2" value="85"></td>
-        <td><select id="Team Rating2" name="Team Rating2">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5" selected>5</option></select></td>
     </tr>
     <tr style="background-color: #92887c">
-      <td>Portugal</td>
+      <td><input type="text" id="Team3" name="Team3" value="Portugal"></td>
       <td><input type="number" id="ATT3" name="ATT3" value="85"></td>
       <td><input type="number" id="MID3" name="MID3" value="83"></td>
       <td><input type="number" id="DEF3" name="DEF3" value="85"></td>
       <td><input type="number" id="OVR3" name="OVR3" value="84"></td>
-      <td><select id="Team Rating3" name="Team Rating3">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5" selected>5</option></select></td>
     </tr>
     <tr style="background-color: #bdb5aa">
-      <td>Spain</td>
+      <td><input type="text" id="Team4" name="Team4" value="Spain"></td>
       <td><input type="number" id="ATT4" name="ATT4" value="83"></td>
       <td><input type="number" id="MID4" name="MID4" value="85"></td>
       <td><input type="number" id="DEF4" name="DEF4" value="83"></td>
       <td><input type="number" id="OVR4" name="OVR4" value="84"></td>
-      <td><select id="Team Rating4" name="Team Rating4">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5" selected>5</option></select></td>
     </tr>
     <tr style="background-color: #92887c">
-      <td>England</td>
+      <td><input type="text" id="Team5" name="Team5" value="England"></td>
       <td><input type="number" id="ATT5" name="ATT5" value="86"></td>
       <td><input type="number" id="MID5" name="MID5" value="83"></td>
       <td><input type="number" id="DEF5" name="DEF5" value="83"></td>
       <td><input type="number" id="OVR5" name="OVR5" value="83"></td>
-      <td><select id="Team Rating5" name="Team Rating5">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5" selected>5</option></select></td>
     </tr>
   </table>
   <!-- submit button -->           
